# chatbot_game

./: .gitignore  README.md  Untitled Diagram.drawio  diogram_guess_topic_game.drawio  game_ideas.md  pplm_example_annotated.py  project_architecture.drawio  pyproject.toml
bot/: bot.py  post_processing.py
chatgame/bag_of_words/: bow_utils.py
chatgame/bag_of_words/wordlists/: fantasy.txt  space.txt  technology.txt  космос.txt  наука.txt  технологии.txt
chatgame/classifiers/: classifier.py
chatgame/classifiers/models/: SST_classifier_head.pt  clickbait_classifier_head.pt
chatgame/games/: guess-topic-game.py  guess_topic_game.py
chatgame/language_models/: __init__.py  configuration_rugpt2.py  modeling_rugpt2.py
chatgame/language_models/gpt2/: gpt2.py  text_generation.py  vocab.txt
chatgame/language_models/models/ru-gpt2/: config.json
chatgame/tokenizers/: __init__.py  tokenization_rugpt2.py
chatgame/utils/: decoding.py  losses.py  misc.py  model_loader.py
